--- a/navbar.html
+++ b/navbar.html
@@ -30,6 +30,9 @@
             display: flex;
 
         }
+        #anch {
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -39,7 +42,7 @@
             <p>Men</p>
             <p>Women</p>
             <p>Login</p>
-            <p>Signup</p>
+            <p><a id="anch" href="signup.html">Signup</a></p>
         </div>
     </div>
 </body>
